# reporter

./: DEPLOY.md  README.md  pyproject.toml
config/: config.py  crypto_tasks.yaml  tasks.yaml
deploy/: Dockerfile  README.md  crontab  deploy.sh  docker-compose.yml  env.docker.template  update.sh
example/: README.md  demo_config.py  demo_simple.py
scripts/: run.py  run_agents.py  run_scheduler.py
src/reporter/: agent_factory.py  ai_service.py  main.py  slack_service.py  task_scheduler.py
src/reporter/agents/: base_agent.py  financial_agent.py
